--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       --secondary-color: #FF5733;
 
       /* LEFT/RIGHT palette (US/KR) */
-      --left-color: #2E4172;
-      --center-left-color: #87CEEB;
+      --left-color: #2E4172;          /* dark blue */
+      --center-left-color: #87CEEB;   /* sky blue */
       --center-color: #7F8C8D;
-      --center-right-color: #F39C12;
-      --right-color: #E74C3C;
+      --center-right-color: #F39C12;  /* orange */
+      --right-color: #E74C3C;         /* red */
 
       --neutral-color: #27AE60;
       --light-gray: #f5f5f5;
@@ -135,16 +135,25 @@
     @keyframes pulse { 0%{transform:scale(1);opacity:.8} 50%{transform:scale(1.25);opacity:1} 100%{transform:scale(1);opacity:.8} }
     @media (prefers-reduced-motion: reduce) { .dot { animation: none; } }
 
-    .view-options { display: flex; background: #fff; border-radius: var(--border-radius); box-shadow: var(--box-shadow); overflow: hidden; margin-bottom: 16px; }
+    .view-options { display: flex; flex-wrap: wrap; background: #fff; border-radius: var(--border-radius); box-shadow: var(--box-shadow); overflow: hidden; margin-bottom: 16px; }
     .view-option { padding: 10px 16px; font-weight: 500; transition: background-color 0.15s; flex: 0 0 auto; }
     .view-option:hover { background: var(--light-gray); }
     .view-option.active { background: var(--primary-color); color: #fff; }
 
-    /* News grid */
+    /* News grid defaults */
     #news-container { display: grid; grid-template-columns: 1fr; gap: 18px; }
     .cards-2 #news-container { grid-template-columns: repeat(2, 1fr); }
     .cards-3 #news-container { grid-template-columns: repeat(3, 1fr); }
 
+    /* === Split layouts (new) === */
+    .cards-lr #news-container.split,
+    .cards-lcr #news-container.split { gap: 18px; }
+    .cards-lr #news-container.split { grid-template-columns: 1fr 1fr; }
+    .cards-lcr #news-container.split { grid-template-columns: 1fr 1fr 1fr; }
+    .split { display: grid; }
+    .split-col { display: flex; flex-direction: column; gap: 18px; min-width: 0; }
+
+    /* Card */
     .article-card {
       background: #fff; border-radius: var(--border-radius); box-shadow: var(--box-shadow);
       overflow: hidden; transition: transform 0.18s ease, box-shadow 0.18s ease;
@@ -152,6 +161,29 @@
     }
     .article-card:hover { transform: translateY(-4px); box-shadow: 0 8px 22px rgba(0,0,0,0.08); }
     .article-card:focus-visible { outline: 3px solid var(--primary-color); outline-offset: 3px; }
+
+    /* Edge-only color treatment (applies in LR / LCR modes) */
+    .cards-lr .article-card.edge-left,
+    .cards-lcr .article-card.edge-left {
+      border: 2px solid transparent;
+      background:
+        linear-gradient(#fff, #fff) padding-box,
+        linear-gradient(135deg, var(--left-color), var(--center-left-color)) border-box;
+      border-radius: var(--border-radius);
+    }
+    .cards-lr .article-card.edge-right,
+    .cards-lcr .article-card.edge-right {
+      border: 2px solid transparent;
+      background:
+        linear-gradient(#fff, #fff) padding-box,
+        linear-gradient(135deg, #8B0000, var(--center-right-color)) border-box; /* dark red → orange */
+      border-radius: var(--border-radius);
+    }
+    .cards-lr .article-card.edge-center,
+    .cards-lcr .article-card.edge-center {
+      border: 1px solid var(--medium-gray);
+      background: #fff;
+    }
 
     .article-source { display: flex; align-items: center; gap: 12px; padding: 12px 14px; border-bottom: 1px solid var(--medium-gray); }
     .source-logo { width: 36px; height: 36px; background: var(--light-gray); border-radius: 6px; display: grid; place-items: center; font-weight: 700; color: #666; }
@@ -179,7 +211,7 @@
     .thumb-frame {
       position: relative;
       width: 100%;
-      aspect-ratio: 16 / 9;     /* default for grid views */
+      aspect-ratio: 16 / 9;
       background: #f2f2f2;
       overflow: hidden;
       border-radius: 12px;
@@ -190,7 +222,7 @@
       width: 100%;
       height: 100%;
       display: block;
-      object-fit: cover;        /* cover in grid views */
+      object-fit: cover;
       object-position: center;
       -webkit-user-select: none;
       user-select: none;
@@ -203,14 +235,14 @@
     .cards-1 .article-card .thumb-frame{
       width: 100%;
       margin: 0;
-      aspect-ratio: 2 / 1;          /* slightly shorter than 16:9 */
+      aspect-ratio: 2 / 1;
       border-radius: 12px;
       overflow: hidden;
       background: transparent;
     }
     .cards-1 .article-card .thumb-frame img.thumb{
-      object-fit: cover !important;  /* fill, no letterboxing */
-      object-position: center 35%;   /* bias crop upward a bit */
+      object-fit: cover !important;
+      object-position: center 35%;
       background: transparent !important;
     }
 
@@ -228,7 +260,10 @@
     footer .container { display: flex; justify-content: space-between; align-items: center; font-size: 13px; opacity: 0.9; }
 
     /* Responsive */
-    @media (max-width: 1024px) { .cards-3 #news-container { grid-template-columns: repeat(2, 1fr); } }
+    @media (max-width: 1024px) {
+      .cards-3 #news-container { grid-template-columns: repeat(2, 1fr); }
+      .cards-lcr #news-container.split { grid-template-columns: 1fr 1fr; }
+    }
     @media (max-width: 900px) {
       main .container { flex-direction: column; }
       .sidebar { width: 100%; position: static; order: 2; }
@@ -236,6 +271,8 @@
       .cards-1 #news-container { justify-items: stretch; }
       .cards-1 .article-card { width: 100%; }
       .cards-1 .article-card .thumb-frame { aspect-ratio: 16 / 9; }
+      .cards-lr #news-container.split { grid-template-columns: 1fr; }
+      .cards-lcr #news-container.split { grid-template-columns: 1fr; }
     }
     @media (max-width: 600px) {
       header .container { flex-direction: column; align-items: stretch; }
@@ -261,7 +298,7 @@
 
   <main>
     <div class="container">
-      <!-- Sidebar -->
+      <!-- Sidebar (unchanged) -->
       <aside class="sidebar">
         <section class="filter-section">
           <h2>Filters</h2>
@@ -382,6 +419,9 @@
           <button class="view-option" data-view="1" role="tab" aria-selected="false">List</button>
           <button class="view-option active" data-view="2" role="tab" aria-selected="true">2-up</button>
           <button class="view-option" data-view="3" role="tab" aria-selected="false">3-up</button>
+          <!-- NEW buttons -->
+          <button class="view-option" data-view="lr" role="tab" aria-selected="false">Left vs Right</button>
+          <button class="view-option" data-view="lcr" role="tab" aria-selected="false">Left / Center / Right</button>
         </div>
 
         <div id="error" class="error" style="display:none;"></div>
@@ -407,6 +447,7 @@
         this.currentBias = 'default';
         this.autoRefreshMs = 30 * 60 * 1000;
         this.viewRoot = document.body;
+        this.currentLayout = '2'; // 1 | 2 | 3 | lr | lcr
         this.debouncedLoadNews = this.debounce(() => this.loadNews(), 400);
         this.bindUI();
         this.startAutoRefresh();
@@ -465,9 +506,11 @@
           btn.addEventListener('click', () => {
             viewBtns.forEach(x => { x.classList.remove('active'); x.setAttribute('aria-selected','false'); });
             btn.classList.add('active'); btn.setAttribute('aria-selected','true');
-            const mode = btn.dataset.view;
-            this.viewRoot.classList.remove('cards-1','cards-2','cards-3');
+            const mode = btn.dataset.view;      // '1' | '2' | '3' | 'lr' | 'lcr'
+            this.currentLayout = mode;
+            this.viewRoot.classList.remove('cards-1','cards-2','cards-3','cards-lr','cards-lcr');
             this.viewRoot.classList.add(`cards-${mode}`);
+            this.loadNews(); // re-render to split columns if needed
           });
         });
       }
@@ -495,7 +538,7 @@
           if (this.currentCategory) params.set('category', this.currentCategory);
           if (this.currentBias && this.currentBias !== 'default') params.set('bias', this.currentBias);
 
-          // Time range (server will filter; GNews never sees from/to)
+          // Time range (server will filter)
           const tr = document.getElementById('time-range').value;
           if (tr !== 'any') {
             let ms = 0;
@@ -520,14 +563,22 @@
           const data = await res.json();
           if (data.error) throw new Error(data.error);
 
-          this.renderArticles(data.articles || []);
+          // Render according to current layout
+          const articles = data.articles || [];
+          if (this.currentLayout === 'lr') {
+            this.renderSplit(articles, 'lr');
+          } else if (this.currentLayout === 'lcr') {
+            this.renderSplit(articles, 'lcr');
+          } else {
+            this.renderArticles(articles);
+          }
 
           if (data.quotaExceeded) {
             statusText.textContent = `Showing cached results — GNews daily quota reached`;
             cacheText.textContent = `Response: quota (cached)`;
           } else {
             const cached = res.headers.get('X-Cache') === 'HIT' ? 'cached' : 'fresh';
-            statusText.textContent = `Loaded ${(data.articles || []).length} articles • Last updated: ${new Date().toLocaleTimeString()}`;
+            statusText.textContent = `Loaded ${(articles || []).length} articles • Last updated: ${new Date().toLocaleTimeString()}`;
             cacheText.textContent = `Response: ${cached}`;
           }
         } catch (err) {
@@ -538,20 +589,73 @@
         }
       }
 
+      /* === Default (list/2-up/3-up) === */
       renderArticles(articles) {
         const el = document.getElementById('news-container');
         if (!articles || !articles.length) {
           el.innerHTML = `<div class="loading" style="padding:36px;">No articles found. Try a different search or broaden the time range.</div>`;
           return;
         }
-
+        el.classList.remove('split');
         el.innerHTML = articles.map(a => this.cardHTML(a)).join('');
 
-        // NEW: prioritize the first image for perceived speed
+        // prioritize first image
         const firstImg = el.querySelector('.thumb');
         if (firstImg) { firstImg.loading = 'eager'; firstImg.setAttribute('fetchpriority', 'high'); }
 
-        el.querySelectorAll('.article-card').forEach(card => {
+        this._wireCardClicks(el);
+      }
+
+      /* === Split renderers (Left vs Right / Left-Center-Right) === */
+      renderSplit(articles, variant /* 'lr' | 'lcr' */) {
+        const el = document.getElementById('news-container');
+        if (!articles || !articles.length) {
+          el.innerHTML = `<div class="loading" style="padding:36px;">No articles found.</div>`;
+          return;
+        }
+        el.classList.add('split');
+
+        // Group by spectrum
+        const groups = {
+          left: [], center: [], right: []
+        };
+        for (const a of articles) {
+          const b = (a.bias || '').trim();
+          if (b === 'left' || b === 'lean-left') groups.left.push(a);
+          else if (b === 'right' || b === 'lean-right') groups.right.push(a);
+          else groups.center.push(a); // includes exact 'center' and unknowns
+        }
+
+        if (variant === 'lr') {
+          el.innerHTML = `
+            <div class="split-col" id="col-left"></div>
+            <div class="split-col" id="col-right"></div>
+          `;
+          const L = document.getElementById('col-left');
+          const R = document.getElementById('col-right');
+          L.innerHTML = groups.left.map(a => this.cardHTML(a, 'left')).join('');
+          R.innerHTML = groups.right.map(a => this.cardHTML(a, 'right')).join('');
+        } else { // lcr
+          el.innerHTML = `
+            <div class="split-col" id="col-left"></div>
+            <div class="split-col" id="col-center"></div>
+            <div class="split-col" id="col-right"></div>
+          `;
+          document.getElementById('col-left').innerHTML   = groups.left.map(a => this.cardHTML(a, 'left')).join('');
+          document.getElementById('col-center').innerHTML = groups.center.map(a => this.cardHTML(a, 'center')).join('');
+          document.getElementById('col-right').innerHTML  = groups.right.map(a => this.cardHTML(a, 'right')).join('');
+        }
+
+        // prioritize top images of each col
+        el.querySelectorAll('.split-col .thumb')?.forEach((img, i) => {
+          if (i < 3) { img.loading = 'eager'; img.setAttribute('fetchpriority', 'high'); }
+        });
+
+        this._wireCardClicks(el);
+      }
+
+      _wireCardClicks(rootEl) {
+        rootEl.querySelectorAll('.article-card').forEach(card => {
           card.addEventListener('click', () => {
             const url = card.getAttribute('data-url');
             if (url) window.open(url, '_blank', 'noopener,noreferrer');
@@ -564,10 +668,10 @@
             }
           });
         });
-        el.querySelectorAll('.link-btn').forEach(btn => btn.addEventListener('click', (e) => e.stopPropagation()));
+        rootEl.querySelectorAll('.link-btn').forEach(btn => btn.addEventListener('click', (e) => e.stopPropagation()));
       }
 
-      cardHTML(article) {
+      cardHTML(article, edgeSideOverride) {
         const title = this.truncate(article?.title, 120) || 'Untitled';
         const desc = this.truncate(article?.description, 180) || 'No description available.';
         const srcName = article?.source?.name || 'Unknown';
@@ -585,8 +689,17 @@
         const biasLabel = biasLabelMap[detected] || 'Unknown';
         const biasClass = detected || 'unknown';
 
+        // Which edge style to apply in split modes
+        let edgeSide = edgeSideOverride;
+        if (!edgeSide) {
+          if (detected === 'left' || detected === 'lean-left') edgeSide = 'left';
+          else if (detected === 'right' || detected === 'lean-right') edgeSide = 'right';
+          else edgeSide = 'center';
+        }
+        const edgeClass = `edge-${edgeSide}`;
+
         return `
-          <article class="article-card" data-url="${this.escape(url)}" tabindex="0" role="article" aria-label="${this.escape(title)}">
+          <article class="article-card ${edgeClass}" data-url="${this.escape(url)}" tabindex="0" role="article" aria-label="${this.escape(title)}">
             <div class="article-source">
               <div class="source-logo" aria-hidden="true">${this.initial(srcName)}</div>
               <div class="source-info">
